# rust-ml-inference

./: .gitignore  Cargo.toml  README.md  build.rs  pyproject.toml  quantise_resnet50_onnx.py  resnet50_data_reader.py  save_resnet50_onnx.py  test_resnet50_onnx.py
src/: main.rs
