[package]
name = "rust-resnet50-inference"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
image = "0.24"      # For preprocessing MNIST images
ndarray = "0.15"    # For tensor handling

tract-onnx = "0.21" # For tract
ort = { version = "2.0.0-rc.10", features = ["ndarray"] }   # For onnxruntime
burn = { version = "0.18", features = ["ndarray"] } # For burn

[build-dependencies]
burn-import = { version = "0.18", features = ["onnx"] }
